fix on safari

--- a/src/components/card/style.css
+++ b/src/components/card/style.css
@@ -1,6 +1,7 @@
 .wrapper {
 	flex: auto;
 	min-width: 247px;
+	justify-content: space-around;
 }
 
 .card {
