--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -12,7 +12,7 @@
 
 .header h1 {
 	position: relative;
-	width: 220px;
+	width: 270px;
 	display: block;
 	margin: 0;
 	margin-top: 15px;
